# SnowRunner-Disable-Auto-Reverse

./: CMakeLists.txt  LICENSE  README.md
DLL/: CMakeLists.txt  DisableAutoReverse.cpp  DisableAutoReverse.h  Logging.h  version.rc
DLL/include/: data_types.h
DLL/lib/: PLACEHOLDER  detours.lib
Injector/: CMakeLists.txt  Injector.cpp  injector.h  version.rc
